--- a/app/src/components/molecules/team-member/styles.scss
+++ b/app/src/components/molecules/team-member/styles.scss
@@ -12,6 +12,7 @@
     position: absolute;
     padding: 30px;
     border: 1px #473b23 solid;
+    text-align: justify;
     @media screen and (max-width: 768px) {
       width: 90%;
       left: 5%;
