--- a/app/src/components/atoms/acting-item/styles.scss
+++ b/app/src/components/atoms/acting-item/styles.scss
@@ -15,6 +15,7 @@
     border: 1px #d7d1c9 solid;
     max-height: 0;
     opacity: 0;
+    text-align: justify;
     transition: all 0.5s ease-in-out;
     pointer-events: none;
   }
