--- a/app/src/components/templates/Contact/styles.scss
+++ b/app/src/components/templates/Contact/styles.scss
@@ -45,9 +45,9 @@
     margin: 0 auto;
 
     h2 {
-      max-width: 580px;
-      width: 100%;
-      margin: 0 auto;
+      // max-width: 580px;
+      // width: 100%;
+      // margin: 0 auto;
       font-weight: 400;
       margin-bottom: 30px;
 
