--- a/app/src/components/templates/Header/styles.scss
+++ b/app/src/components/templates/Header/styles.scss
@@ -4,6 +4,8 @@
   width: 100%;
   z-index: 40;
   padding: 30px 0;
+  top: 0;
+  left: 0;
   transition: all 0.3s ease-in-out;
 
   @media screen and (max-width: 991px) {
