--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
@@ -51,6 +56,9 @@ body {
     font-size: 1.375em;
     color: #8d9a8d;
   }
+}
+p {
+  text-align: justify;
 }
 .btn {
   padding: 13px;
