--- a/app/src/components/templates/Acting/styles.scss
+++ b/app/src/components/templates/Acting/styles.scss
@@ -15,6 +15,12 @@
       min-width: 150px;
       box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.5);
     }
+    .contact-button {
+      text-align: left;
+      @media screen and (min-width: 768px) {
+        text-align: right;
+      }
+    }
   }
   .actings {
     h2 {
