--- a/app/src/components/templates/Header/styles.scss
+++ b/app/src/components/templates/Header/styles.scss
@@ -8,6 +8,28 @@
   left: 0;
   transition: all 0.3s ease-in-out;
 
+  .language-switcher {
+    display: flex;
+    flex-wrap: nowrap;
+    &,
+    a {
+      font-size: 0.8rem;
+      color: #585044;
+      display: inline-block;
+      text-shadow: 2px 2px 2 #323232;
+    }
+    a {
+      cursor: pointer;
+      text-decoration: none;
+      transition: all 0.3s ease-in-out;
+      &:hover,
+      &.active {
+        text-decoration: underline;
+        font-weight: 500;
+      }
+    }
+  }
+
   @media screen and (max-width: 991px) {
     .container {
       margin: 0;
