--- a/app/src/components/templates/Acting/styles.scss
+++ b/app/src/components/templates/Acting/styles.scss
@@ -44,6 +44,7 @@
         font-weight: 700;
         font-size: 2.5em;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         span {
